# ESPDrive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
app/: index.html  package.json  vite.config.ts
app/dev-dist/: sw.js
app/public/: manifest.json
app/src/: App.tsx
app/src/components/controls/: JoyStick.tsx
app/src/constants/: index.ts
app/src/lib/: transport.ts
app/src/pages/: NotFound.tsx  index.tsx
main/: CMakeLists.txt  controls.cpp  index.html  led_status.cpp  main.cpp  motor.cpp  servo.cpp  web_server.cpp  wifi.cpp
main/includes/: controls.hpp  led_status.hpp  motor.hpp  servo.hpp  web_server.hpp  wifi.hpp
